--- a/index.html
+++ b/index.html
@@ -11,43 +11,45 @@
 
 
 <body>
-<section>
-<div id = "2">
-  <button class="group"> 2 </button>
-</div>
-<div id = "3">
-  <button class="group"> 3 </button>
-</div>
-<div id = "4">
-  <button class="group"> 4 </button>
-</div>
-<div id = "5">
-  <button class="group"> 5 </button>
-</div>
-<div id = "6">
-  <button class="group"> 6 </button>
-</div>
-<div id = "7">
-  <button class="group"> 7 </button>
-</div>
-<div id = "8">
-  <button class="group"> 8 </button>
-</div>
-<div id = "9">
-  <button class="group"> 9 </button>
-</div>
-<div id = "10">
-  <button class="group"> 10 </button>
-</div>
+<header>
+  <section class="groupSelector">
+    <div id = "2"  class="button">
+      <button class="group"> 2 </button>
+    </div>
+    <div id = "3" class="button">
+      <button class="group"> 3 </button>
+    </div>
+    <div id = "4" class="button">
+      <button class="group"> 4 </button>
+    </div>
+    <div id = "5" class="button">
+      <button class="group"> 5 </button>
+    </div>
+    <div id = "6" class="button">
+      <button class="group"> 6 </button>
+    </div>
+    <div id = "7" class="button">
+      <button class="group"> 7 </button>
+    </div>
+    <div id = "8" class="button">
+      <button class="group"> 8 </button>
+    </div>
+    <div id = "9" class="button">
+      <button class="group"> 9 </button>
+    </div>
+    <div id = "10" class="button">
+      <button class="group"> 10 </button>
+    </div>
+  </section>
 
-</section>
 <div id = "generate">
   <button class = "genbutton"> Create Groups </button>
 </div>
+
+</header>
 <section>
 
-<div id ="displayheaders"></div>
-<div id="displaygroups"></div>
+<section id="display"></section>
 
 
 
