Adds faq/clear buttons and functionality.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </div>
       </section>
     </header>
+    <section class="otherButtons">
+      <button id="faq">FAQ</button>
+      <button id="clear">Clear Giph's</button>
+    </section>
     <div id="display"></div>
   </body>
 </html>
