Adds button functionality, enter key functionality

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>OMDB Movie Search</h1>
-      <h2>Three movies that have had an impact on my life and a regular movie search</h2>
-      <button id="showMyMovies">Hide My Movies</button>
+      <h1>OMDb Movie Search</h1>
       <button id="showAllMovies">Hide All Movies</button>
       <input type="search" id="movieInput" placeholder="Title (required)" />
       <input type="search" id="yearRel" placeholder="Year (opt)" />
