Adds button titles and alert for undefined search

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <option>Episode</option>
         </select>
         <button id="search">Search</button>
-        <button id="hideMovies">Hide Movies</button>
-        <button id="clear">Clear Display</button>
-        <button id="faqButton">Show FAQ</button>
+        <button id="hideMovies" title="Hide all movies from screen">Hide Movies</button>
+        <button id="clear" title="Clear displayed movies from search">Clear Display</button>
+        <button id="faqButton" title="Coming soon">Show FAQ</button>
       </section>
     </header>
     <section class="movies">
