Adds title for search button, some comments

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <option>Series</option>
           <option>Episode</option>
         </select>
-        <button id="search">Search</button>
+        <button id="search" title="Search for your movie!">Search</button>
         <button id="hideMovies" title="Hide all movies from screen">Hide Movies</button>
         <button id="clear" title="Clear displayed movies from search">Clear Display</button>
         <button id="faqButton" title="Coming soon">Show FAQ</button>
