--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Weekend Assignment</title>
 		<link rel="stylesheet" href="style.css">
-		<script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+		<script src="jquery-1.12.2.min.js"></script>
 		<script src="app.js"></script>
 	</head>
 	<body>
