--- a/server/public/index.html
+++ b/server/public/index.html
@@ -38,10 +38,10 @@
           </li>
         </ul>
       </div>
-    </div>  <!--ng-show="listCandidates"-->
+    </div>  <!--id="displayCandidates" ng-show="listCandidates"-->
 
     <div id="displayWinner" ng-model="winner" ng-show="showWinner">
       Our president is... {{winner}}!!!
-    </div> <!--ng-model="winner" ng-show-"showWinner"-->
+    </div> <!--id="displayWinner" ng-model="winner" ng-show="showWinner"-->
   </body> <!--ng-controller="PoliticsController"-->
 </html>
